third_party/move/move-compiler-v2/tests/checking/typing/constant_folding.move
// TODO(#10880)
module 0x42::constant_folding {
    const LN2_X_32: u64 = 32 * 2977044472;
}
